fix(ui):layout overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 * {
-	@apply scroll-smooth;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 @layer base {
